--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = "1.64"
 [dependencies]
 indexmap = "2.2.1"
 itoa = "1.0"
+ordered-float = "5"
 ryu = "1.0"
 serde = "1.0.195"
 unsafe-libyaml = "0.2.11"
